--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,10 @@
 FINNHUB_API_KEY=your_development_finnhub_key
 FINNHUB_BASE_URL=https://finnhub.io/api/v1
+ALPHAVANTAGE_API_KEY=your_alphavantage_key
+ALPHAVANTAGE_BASE_URL=https://www.alphavantage.co/query
 APP_ORIGIN=http://localhost:5173
 DATABASE_URL=file:./data/app.db
+JWT_SECRET=super_secret_jwt_key_here
 ENCRYPTION_MASTER_KEY=12345678901234567890123456789012
-ANALYSIS_TIMEZONE=America/Vancouver
+ANALYSIS_TIMEZONE=America/Toronto
 ADMIN_JOB_TOKEN=development_secret_admin_token
