--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,73 @@
-FINNHUB_API_KEY=your_development_finnhub_key
-FINNHUB_BASE_URL=https://finnhub.io/api/v1
-ALPHAVANTAGE_API_KEY=your_alphavantage_key
-ALPHAVANTAGE_BASE_URL=https://www.alphavantage.co/query
+# ==========================================
+# GranStocks Analytics - Core Configuration
+# ==========================================
+
+# Port the Fastify backend will bind to
+PORT=3000
+
+# The hostname/URL where your frontend is hosted. Very important for CORS.
 APP_ORIGIN=http://localhost:5173
+
+# Must be "production" for secure cookies and strict validation.
+NODE_ENV=development
+
+# Database Connection (SQLite by default)
 DATABASE_URL=file:./data/app.db
-JWT_SECRET=super_secret_jwt_key_here
-ENCRYPTION_MASTER_KEY=12345678901234567890123456789012
+
+# ==========================================
+# Security & Encryption (CRITICAL)
+# ==========================================
+
+# Used to sign HTTP-only JSON Web Tokens for user sessions (String, minimum 16 chars)
+JWT_SECRET=supersecretjwt_default_dev_only
+
+# Used to sign session cookies (String, minimum 16 chars)
+COOKIE_SECRET=supersecretcookie_default_dev_only
+
+# AES-256-GCM encryption key to secure user AI API keys in the database.
+# MUST BE EXACTLY 32 CHARACTERS LONG. Example: 32_characters_long_secret_string
+ENCRYPTION_MASTER_KEY=your_32_character_encryption_key_here
+
+# Used to authorize automated cron jobs or external scripts
+ADMIN_JOB_TOKEN=your_secure_admin_job_token
+
+# ==========================================
+# Initial SuperAdmin Scaffolding
+# ==========================================
+
+# During initial DB boostrap, creates an admin with this criteria
+SUPERADMIN_EMAIL=admin@granstocks.local
+SUPERADMIN_PASSWORD=change_this_password
+
+# ==========================================
+# Market Data Providers
+# ==========================================
+
+# Primary API for Equities & Fundamentals (from finnhub.io)
+FINNHUB_API_KEY=your_finnhub_api_key_here
+FINNHUB_BASE_URL=https://finnhub.io/api/v1
+
+# Fallback API for Equities (from alphavantage.co)
+ALPHAVANTAGE_API_KEY=your_alphavantage_api_key_here
+ALPHAVANTAGE_BASE_URL=https://www.alphavantage.co/query
+
+# Crypto Data URLs (Uses Binance public endpoints, no key required)
+BINANCE_REST_BASE_URL=https://api.binance.com
+BINANCE_WS_BASE_URL=wss://stream.binance.com:9443
+
+# ==========================================
+# Timezone & Scheduling
+# ==========================================
+
+# Specifies the timezone context used when running end-of-day deterministic analytics
 ANALYSIS_TIMEZONE=America/Toronto
-ADMIN_JOB_TOKEN=development_secret_admin_token
+
+# ==========================================
+# Feature Flags
+# ==========================================
+
+# Set to "true" to lock down new accounts until email verified
+REQUIRE_EMAIL_VERIFICATION=false
+
+# Set to "true" to enable the password reset flow
+ENABLE_EMAIL_PASSWORD_RESET=false
