--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "@dnd-kit/utilities": "^3.2.2",
         "@tanstack/react-query": "^5.39.0",
         "clsx": "^2.1.1",
+        "lightweight-charts": "^5.1.0",
         "lucide-react": "^0.379.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
