--- a/granstocks-nginx.conf
+++ b/granstocks-nginx.conf
@@ -1,6 +1,15 @@
 server {
     listen 80;
     server_name yourdomain.com;
+    return 301 https://$host$request_uri;
+}
+
+server {
+    listen 443 ssl;
+    server_name yourdomain.com;
+
+    ssl_certificate /etc/letsencrypt/live/yourdomain.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/yourdomain.com/privkey.pem;
 
     # Backend proxy + static serving is handled seamlessly by Fastify
     location / {
@@ -12,6 +21,7 @@ server {
         proxy_cache_bypass $http_upgrade;
         
         # Security headers
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-XSS-Protection "1; mode=block";
         add_header X-Content-Type-Options "nosniff";
