--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,12 @@
         "@dnd-kit/utilities": "^3.2.2",
         "@tanstack/react-query": "^5.39.0",
         "clsx": "^2.1.1",
+        "i18next": "^25.8.13",
+        "i18next-browser-languagedetector": "^8.2.1",
         "lucide-react": "^0.379.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^16.5.4",
         "react-router-dom": "^6.23.1",
         "react-select": "^5.10.2",
         "recharts": "^2.15.4",
