--- a/server/.env.example
+++ b/server/.env.example
@@ -8,8 +8,8 @@ PORT=3000
 # The hostname/URL where your frontend is hosted. Very important for CORS.
 APP_ORIGIN=http://localhost:5173
 
-# Must be "production" for secure cookies and strict validation.
-NODE_ENV=development
+# Must be "production" on VPS. Enables secure cookies, strict secret validation.
+NODE_ENV=production
 
 # Database Connection (SQLite by default)
 DATABASE_URL=file:./data/app.db
@@ -27,9 +27,6 @@ COOKIE_SECRET=supersecretcookie_default_dev_only
 # AES-256-GCM encryption key to secure user AI API keys in the database.
 # MUST BE EXACTLY 32 CHARACTERS LONG. Example: 32_characters_long_secret_string
 ENCRYPTION_MASTER_KEY=your_32_character_encryption_key_here
-
-# Used to authorize automated cron jobs or external scripts
-ADMIN_JOB_TOKEN=your_secure_admin_job_token
 
 # ==========================================
 # Initial SuperAdmin Scaffolding
