feat: Resend email integration — verification, password reset, dev console fallback

--- a/server/.env.example
+++ b/server/.env.example
@@ -60,11 +60,25 @@ BINANCE_WS_BASE_URL=wss://stream.binance.com:9443
 ANALYSIS_TIMEZONE=America/Toronto
 
 # ==========================================
+# Email Service (Resend)
+# ==========================================
+
+# Get your API key at https://resend.com
+# Leave blank to disable email sending (emails will be logged to console in dev mode).
+RESEND_API_KEY=your_resend_api_key_here
+
+# The "from" address for outgoing emails. Must be a verified domain in your Resend account.
+# In production this should be something like: GranStocks <noreply@granstocks.com>
+FROM_EMAIL=GranStocks <noreply@granstocks.com>
+
+# ==========================================
 # Feature Flags
 # ==========================================
 
-# Set to "true" to lock down new accounts until email verified
+# Set to "true" to require email verification before login.
+# Requires RESEND_API_KEY to be set (or emails will be printed to console in dev).
 REQUIRE_EMAIL_VERIFICATION=false
 
-# Set to "true" to enable the password reset flow
+# Set to "true" to enable the password reset flow.
+# Requires RESEND_API_KEY to be set (or emails will be printed to console in dev).
 ENABLE_EMAIL_PASSWORD_RESET=false
