--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^16.4.5",
         "fastify": "^5.7.4",
         "node-cron": "^3.0.3",
+        "resend": "^6.9.2",
         "ws": "^8.19.0",
         "yahoo-finance2": "^3.13.0",
         "zod": "^3.23.8"
