config: set email sending domain to verify.granstocks.com

--- a/server/.env.example
+++ b/server/.env.example
@@ -67,9 +67,9 @@ ANALYSIS_TIMEZONE=America/Toronto
 # Leave blank to disable email sending (emails will be logged to console in dev mode).
 RESEND_API_KEY=your_resend_api_key_here
 
-# The "from" address for outgoing emails. Must be a verified domain in your Resend account.
-# In production this should be something like: GranStocks <noreply@granstocks.com>
-FROM_EMAIL=GranStocks <noreply@granstocks.com>
+# The "from" address for outgoing emails.
+# The subdomain verify.granstocks.com should be added as a verified sending domain in Resend.
+FROM_EMAIL=GranStocks <noreply@verify.granstocks.com>
 
 # ==========================================
 # Feature Flags
