feat: integrate Prixe, Brapi.dev, and FMP APIs, fix TSX/IBOV search and screener

--- a/server/.env.example
+++ b/server/.env.example
@@ -40,15 +40,24 @@ SUPERADMIN_PASSWORD=change_this_password
 # Market Data Providers
 # ==========================================
 
-# Primary API for Equities & Fundamentals (from finnhub.io)
+# === Financial Modeling Prep (for TSX) ===
+# Required for Canadian stocks
+# Get yours at https://financialmodelingprep.com
+FMP_API_KEY=
+
+# === Brapi (for Ibovespa / B3) ===
+
+# === Primary Stock Data Provider (Prixe) ===
+# Get yours at https://prixe.io
+PRIXE_API_KEY=your_prixe_api_key_here
+
+# === Finnhub (fallback for international/metadata) ===
 FINNHUB_API_KEY=your_finnhub_api_key_here
 FINNHUB_BASE_URL=https://finnhub.io/api/v1
 
-# Fallback API for Equities (from alphavantage.co)
-ALPHAVANTAGE_API_KEY=your_alphavantage_api_key_here
-ALPHAVANTAGE_BASE_URL=https://www.alphavantage.co/query
-
-# Crypto Data URLs (Uses Binance public endpoints, no key required)
+# === Binance (for Crypto) ===
+# Uses public endpoints, no API key required.
+# Get info at https://www.binance.com
 BINANCE_REST_BASE_URL=https://api.binance.com
 BINANCE_WS_BASE_URL=wss://stream.binance.com:9443
 
